--- a/selection.html
+++ b/selection.html
@@ -17,8 +17,8 @@
     <div class="menu-box">
       <div class="menu-content">
         
-        <h2>Bonjour,</h2>
-        <p>
+        <h2 class="h2selection">Bonjour,</h2>
+        <p class="text-selection">
           Souhaitez-vous consommer votre menu sur place ou préférez-vous l'emporter ?
         </p>
         <div class="button-group">
@@ -26,13 +26,15 @@
             <img src="./annexe/images/logoaemporter.png" id="image-selection"
                  alt="Icône d'une table avec deux chaises jaunes" 
                  />
-            <span>Sur Place</span>
+                 <br>
+            <span class="text-button">Sur Place</span>
           </button>
           <button type="button" id="menu-button" onclick="choisiroption(1)">
             <img src="./annexe/images/logosurplace.png" id="image-selection"
                  alt="Icône d'un sac à emporter McDonald's jaune et marron" 
                  />
-            <span>A Emporter</span>
+                 <br>
+            <span class="text-button">A Emporter</span>
           </button>
         </div>
       </div>
