--- a/chevalet.html
+++ b/chevalet.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;800&display=swap" rel="stylesheet">
 
   <title>Ton chevalet</title>
@@ -13,7 +13,7 @@
   <img src="./annexe/images/fondchoix1.png" alt="Logo de McDonald's" class="image-fond-chevalet">
 
     <div id="chevalet-contenair">
-      <img src="" alt="">
+      <img src="./annexe/images/" alt="">
         <h2>Pour etre servis a table,</h2>
         <p>Recuperez un chevalet et indiquez ici le numero inscrit dessus</p>
         <div class="code-inputs">
