--- a/commande.html
+++ b/commande.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;800&display=swap" rel="stylesheet" />
   <title>Menu fixe avec flèches</title>
   <link rel="stylesheet" href="style.css" />
@@ -35,8 +35,9 @@
         
         <div id="bottom-order">
           <hr class="order-separator" />
-        <p id="total-text">TOTAL (ttc) <span id="order-total"></span></p>
-
+          <div class="container-total-text">
+        <p id="total-text"><span id="text-total">TOTAL (ttc)</span> <span id="order-total"></span></p>
+      </div>
         <div id="order-actions">
           <button id="cancel-order" onclick="abandon()">Abandon</button>
           <button id="pay-order" onclick="redirigerVersChevalet()">Payer</button>
