--- a/selection.html
+++ b/selection.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Commencer votre Commande </title>
   <link rel="stylesheet" href="style.css"/>  
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -12,9 +12,9 @@
 
   
 
-  <div class="container"id="container1">
+  <div class="container "id="container1">
     <img src="./annexe/images/fondchoix1.png" alt="Logo de McDonald's" class="image-fond-selection"/>
-    <div class="menu-box">
+    <div class="menu-box cont-100">
       <div class="menu-content">
         
         <h2 class="h2selection">Bonjour,</h2>
