remise en ordre des fichier

--- a/Version Final/commande.html
+++ b/Version Final/commande.html
@@ -37,7 +37,7 @@
     
       </div>
       <div id="col-15" class="col-15 absolute">
-
+        <div class="text-"></div>
         <div id="container-order ">
       
             <div id="order-summary" class="order-summary ">
